--- a/staticfiles/assets/css/style.css
+++ b/staticfiles/assets/css/style.css
@@ -132,6 +132,7 @@ nav li .custom-dropdown-menu{
 .c-c:hover{
     background-color: var(--pink);
     border-color: var(--pink);
+    color: var(--bg);
 }
 
 .show-dropdown{
@@ -499,4 +500,20 @@ input:focus, textarea:focus, select:focus {
 .accordion-button:not(.collapsed){
     background: var(--pink) !important;
     color: var(--bg) !important;
+}
+.accordion-button{
+    background-color: #fff8f8;
+}
+
+.accordion-button::after {
+    color: var(--pink);
+}
+.accordion-button:focus::after {
+    color: var(--white);
+    filter: invert(1) brightness(1000%);
+}
+
+.accordion-button:not(.collapsed)::after {
+    color: var(--white);
+    filter: invert(1) brightness(1000%);
 }
